# smiles-toxicity

./: .env.example  .gitignore  cli.py  pyproject.toml  train.py
src/: config.py  tokenizer.py
src/data/: __init__.py  base.py  masked.py  toxicity.py
src/model/: __init__.py  transformer.py  util.py
src/trainer/: __init__.py  base.py  masked.py  toxicity.py
