[project]
name = "smiles-toxicity"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jwhowes", email = "howesjacob8@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
