[project]
name = "smiles-toxicity"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jwhowes", email = "howesjacob8@gmail.com"},
]
dependencies = ["numpy>=2.2.4", "torch>=2.6.0", "datasets>=3.5.0", "transformers>=4.50.3", "einops>=0.8.1", "pandas>=2.2.3", "click>=8.1.8", "accelerate>=1.5.2", "matplotlib>=3.10.1", "pydantic>=2.11.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
